# kanbun

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  apollo-contacts-export.csv  docker-compose.yml  next.config.js  package-lock.json  package.json  requirements.txt  sample-data.csv  sample.csv  tsconfig.json
app/: config.py  database.py  main.py  models.py
app/services/: company_search.py  csv_parser.py  firecrawl_scraper.py  job_processor.py  keyword_extractor.py  linkedin_client.py  linkedin_scraper.py  screenshot_service.py  verifier.py
app/static/: index.html
data/: .gitkeep  linkedin_cookies.json  sidcrm.db
data/browser_profile/: Local State
docs/plans/: 2026-01-11-lead-enrichment-design.md  2026-01-11-lead-enrichment-implementation.md  2026-01-11-playwright-enrichment-design.md  2026-01-12-email-templates-design.md  (+8 more)
scripts/: backup_daily.sh  backup_to_gdrive.sh  refresh_linkedin_cookie.py  seed_demo_db.py  tauri-dev-server.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  seed.rs
src-tauri/src/agents/: claude_code.rs  mock.rs  mod.rs  process.rs  webhook.rs
src-tauri/src/connectors/: mod.rs  obsidian.rs  todoist.rs
src-tauri/src/db/: mod.rs
src-tauri/src/watchers/: mod.rs
tests/: test_company_search.py  test_config.py  test_csv_parser.py  test_database.py  test_job_processor.py  test_keyword_extractor.py  test_linkedin_client.py  test_main.py  test_models.py  test_verifier.py
(+1053 files in other folders)
