[package]
name = "kanbun"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
shellexpand = "3"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "kanbun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
